Fix up spacing in model details page
Fixes #208, Fixes #207

--- a/src/pages/Models/Details/_model-details.scss
+++ b/src/pages/Models/Details/_model-details.scss
@@ -116,6 +116,5 @@
     border-radius: 50%;
     margin-right: 0.5rem;
     position: relative;
-    top: 0.25rem;
   }
 }
